[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Kenney Space Shooter/PNG/Enemies/enemyBlack2.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Enemys/Enemy2.gd" type="Script" id=2]

[sub_resource type="GDScript" id=4]
script/source = "extends Area2D

signal hit(dmg)


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass

func hit(DMG):
	emit_signal(\"hit\", DMG)
"

[sub_resource type="CircleShape2D" id=1]
radius = 42.0476

[sub_resource type="Animation" id=2]
resource_name = "Inst"
length = 3.0
step = 0.5
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "befree"
} ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("EnemySprite:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 304, -0.25, 0, 0.25, 0, 97, -0.25, 0, 0.25, 0, 314, -0.25, 0, 0.25, 0, 503, -0.25, 0, 0.25, 0, 274, -0.25, 0, 0.25, 0, 149, -0.25, 0, 0.25, 0, -126, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("EnemySprite:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -65, -0.25, 0, 0.25, 0, -245, -0.25, 0, 0.25, 0, -437, -0.25, 0, 0.25, 0, -725, -0.25, 0, 0.25, 0, -889, -0.25, 0, 0.25, 0, -889, -0.25, 0, 0.25, 0, -889, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3 )
}

[sub_resource type="Animation" id=5]
resource_name = "Inst 2"
length = 3.0
step = 0.5
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "befree"
} ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("EnemySprite:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 304, -0.25, 0, 0.25, 0, 479, -0.25, 0, 0.25, 0, 297, -0.25, 0, 0.25, 0, 119, -0.25, 0, 0.25, 0, 290, -0.25, 0, 0.25, 0, 518, -0.25, 0, 0.25, 0, 749, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("EnemySprite:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -65, -0.25, 0, 0.25, 0, -257, -0.25, 0, 0.25, 0, -442, -0.25, 0, 0.25, 0, -602, -0.25, 0, 0.25, 0, -809, -0.25, 0, 0.25, 0, -823, -0.25, 0, 0.25, 0, -844, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3 )
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("EnemySprite:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 304, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("EnemySprite:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -65, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[node name="Enemy2" type="Node2D"]
script = ExtResource( 2 )

[node name="EnemySprite" type="Sprite" parent="."]
position = Vector2( 304, -65 )
texture = ExtResource( 1 )

[node name="Enemy" type="Area2D" parent="EnemySprite"]
collision_layer = 16
collision_mask = 2050
script = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemySprite/Enemy"]
shape = SubResource( 1 )

[node name="Barrel" type="Position2D" parent="EnemySprite"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Inst = SubResource( 2 )
"anims/Inst 2" = SubResource( 5 )
anims/RESET = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[connection signal="body_entered" from="EnemySprite/Enemy" to="." method="_on_Enemy_body_entered"]
[connection signal="hit" from="EnemySprite/Enemy" to="." method="_on_Enemy_hit"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
